; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_read_property.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_read_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SPL_ARRAY_ARRAY_AS_PROPS = common dso_local global i32 0, align 4
@ZEND_PROPERTY_EXISTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32, i8**, i32*)* @spl_array_read_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @spl_array_read_property(i32* %0, i32* %1, i32 %2, i8** %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_3__*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8** %3, i8*** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call %struct.TYPE_3__* @spl_array_from_obj(i32* %14)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %12, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @SPL_ARRAY_ARRAY_AS_PROPS, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %35

22:                                               ; preds = %5
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* @ZEND_PROPERTY_EXISTS, align 4
  %26 = call i32 @zend_std_has_property(i32* %23, i32* %24, i32 %25, i32* null)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %35, label %28

28:                                               ; preds = %22
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @ZVAL_STR(i32* %13, i32* %29)
  %31 = load i32*, i32** %7, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i32*, i32** %11, align 8
  %34 = call i32* @spl_array_read_dimension(i32* %31, i32* %13, i32 %32, i32* %33)
  store i32* %34, i32** %6, align 8
  br label %42

35:                                               ; preds = %22, %5
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %9, align 4
  %39 = load i8**, i8*** %10, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = call i32* @zend_std_read_property(i32* %36, i32* %37, i32 %38, i8** %39, i32* %40)
  store i32* %41, i32** %6, align 8
  br label %42

42:                                               ; preds = %35, %28
  %43 = load i32*, i32** %6, align 8
  ret i32* %43
}

declare dso_local %struct.TYPE_3__* @spl_array_from_obj(i32*) #1

declare dso_local i32 @zend_std_has_property(i32*, i32*, i32, i32*) #1

declare dso_local i32 @ZVAL_STR(i32*, i32*) #1

declare dso_local i32* @spl_array_read_dimension(i32*, i32*, i32, i32*) #1

declare dso_local i32* @zend_std_read_property(i32*, i32*, i32, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
